# TropicalCode

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 26e476b49d36_.py  692ce065558e_.py  6eb1aacc7ee8_criando_tabelas_de_usuario.py  eaa88a1a9adc_.py  fa8288192e47_.py
src/tropicalcode/: database.py  models.py  settings.py
src/tropicalcode/dados/: powerBi.py
src/tropicalcode/interfaces/: entrada.py  estacionamento.py  mapa.py  qr_entrada.py  qr_saida.py  saida.py  usuario.py
src/tropicalcode/repositorios/: automovel_repo.py  estacionamento_repo.py  registro_atividade_repo.py  trabalho_repo.py  usuario_repo.py
src/tropicalcode/seed/: estacionamentos.py
